1.7.2
- Now the correct resistence will be shown for player and pet
- Advanced char stats: Redo MP5, now split into Item, Casting, Spirit
- Fix an overlapping error with health on the healthglobe
- Added option to set Actionbar fade per Actionbar (Show always, show in combat, show only on mouse over)

1.7.1
- Fix a lua error when hover the micromenu
- Update libs
- Added X and Y offset for tooltip if anchor is set to cursor
- Added durability icon to char stats
- Added healthprediction to party, target and target of target frame
- Added healthprediction to healthglobe

1.7.0
- Fix a bug which causes a conflict with other addons

1.6.9
- Added sorting to bags and bank
    - Also for bags the option to sort to first or last bag (cogwheel at the bag; counts for bag and bank)
- Added option the set the Stancebar to the left or right of the Actionbar
- Fix short freeze when open bag or bank
- Added "Total DPS" into the Damage stats tooltip
- If minimap is on top now all icons on the minimap are accessable
- Settings: Checkboxes now also toggle if click on the text

1.6.8
- Fix lua error in BG's for level 60 chars

1.6.7
- Redo Inventory to work with the keyring

1.6.6
- Fix a bug in bankframes

1.6.5
- Added Keyring

1.6.4
- Update libs
- Error if acception an PvP invite: Workaround: If the invite pops up type /reload then you can accept the invite
- Added BG queue icon

1.6.3
- Fix lua error for druids

1.6.2
- Added Questtarget to the Immersive dialoge (At the End)
- Changed Bag and Bank min sizing
- Changed target debuffs to 8 per row
- Added option under Skins 'Use Blizzard Class Colors'
- Added Defense stat for Warrior, Druid and Paladin

1.6.1
- Update libs

1.6.0
- Added Honortab

1.5.0
- Fix chatframe moving and resizing error
- Update libs

1.4.0
- Added advanced char stats (hover over the 'Attribute'-label)
- Change lib from LibClassicHealComm-1.0 to LibHealComm-4.0
- Added pet level to pet frame
- Update libs

1.3.0
