@@ -106,6 +106,7 @@ GW_DEFAULT["target_BUFFS_FILTER_ALL"] = false
 GW_DEFAULT["target_ILVL"] = false
 GW_DEFAULT["target_THREAT_VALUE_ENABLED"] = false
 GW_DEFAULT["target_HOOK_COMBOPOINTS"] = false
+GW_DEFAULT["target_AURAS_ON_TOP"] = false
 
 GW_DEFAULT["target_x_position"] = -100
 GW_DEFAULT["target_y_position"] = -100
